@@ -8569,6 +8569,9 @@ then \texttt{File2} is unified with this name.
 \item else if the file whose name is \texttt{File1} + \texttt{'.pro'} exists
 then \texttt{File2} is unified with this name.
 
+\item else if the file whose name is \texttt{File1} + \texttt{'.prolog'} exists
+then \texttt{File2} is unified with this name.
+
 \item else \texttt{File2} is unified with the name \texttt{File1} +
 \texttt{'.pl'}.
 
