@@ -863,7 +863,7 @@ Suffix of the file & Type of the file & Handled by: \\
 
 \hline\hline
 
-\texttt{.pl}, \texttt{.pro} & Prolog source file & \texttt{pl2wam} \\
+\texttt{.pl}, \texttt{.pro}, \texttt{.prolog} & Prolog source file & \texttt{pl2wam} \\
 
 \hline
 
