@@ -139,11 +139,17 @@ predicate('$emit_code_files/3_$aux2'/4,129,static,private,monofile,local,[
     pragma_arity(5),
     get_current_choice(x(4)),
     try_me_else(1),
-    get_atom('.pl',0),
-    cut(x(4)),
-    put_value(x(1),0),
-    put_value(x(2),1),
-    put_value(x(3),2),
+    allocate(4),
+    get_variable(y(0),1),
+    get_variable(y(1),2),
+    get_variable(y(2),3),
+    get_variable(y(3),4),
+    call('$prolog_file_suffix'/1),
+    cut(y(3)),
+    put_value(y(0),0),
+    put_value(y(1),1),
+    put_value(y(2),2),
+    deallocate,
     execute(atom_concat/3),
 
 label(1),
@@ -180,7 +186,35 @@ label(1),
     proceed]).
 
 
-predicate(emit_code_term/2,147,static,private,monofile,global,[
+predicate('$prolog_file_suffix'/1,148,static,private,monofile,global,[
+    switch_on_term(2,1,fail,fail,fail),
+
+label(1),
+    switch_on_atom([('.pl',3),('.pro',5),('.prolog',7)]),
+
+label(2),
+    try_me_else(4),
+
+label(3),
+    get_atom('.pl',0),
+    proceed,
+
+label(4),
+    retry_me_else(6),
+
+label(5),
+    get_atom('.pro',0),
+    proceed,
+
+label(6),
+    trust_me_else_fail,
+
+label(7),
+    get_atom('.prolog',0),
+    proceed]).
+
+
+predicate(emit_code_term/2,154,static,private,monofile,global,[
     allocate(2),
     get_variable(y(0),1),
     put_atom(streamwamfile,1),
@@ -197,7 +231,7 @@ predicate(emit_code_term/2,147,static,private,monofile,global,[
     execute(close/1)]).
 
 
-predicate(emit_code/5,156,static,private,monofile,global,[
+predicate(emit_code/5,163,static,private,monofile,global,[
     allocate(2),
     get_variable(y(0),4),
     put_atom(streamwamfile,4),
@@ -218,7 +252,7 @@ predicate(emit_code/5,156,static,private,monofile,global,[
     execute(nl/1)]).
 
 
-predicate(emit_pred_start/6,166,static,private,monofile,global,[
+predicate(emit_pred_start/6,173,static,private,monofile,global,[
     pragma_arity(7),
     get_current_choice(x(6)),
     try_me_else(1),
@@ -297,7 +331,7 @@ label(1),
     execute(format/3)]).
 
 
-predicate('$emit_pred_start/6_$aux4'/3,175,static,private,monofile,local,[
+predicate('$emit_pred_start/6_$aux4'/3,182,static,private,monofile,local,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(1),
@@ -320,7 +354,7 @@ label(1),
     proceed]).
 
 
-predicate('$emit_pred_start/6_$aux3'/3,175,static,private,monofile,local,[
+predicate('$emit_pred_start/6_$aux3'/3,182,static,private,monofile,local,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(1),
@@ -343,7 +377,7 @@ label(1),
     proceed]).
 
 
-predicate('$emit_pred_start/6_$aux2'/3,175,static,private,monofile,local,[
+predicate('$emit_pred_start/6_$aux2'/3,182,static,private,monofile,local,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(1),
@@ -366,7 +400,7 @@ label(1),
     proceed]).
 
 
-predicate('$emit_pred_start/6_$aux1'/2,166,static,private,monofile,local,[
+predicate('$emit_pred_start/6_$aux1'/2,173,static,private,monofile,local,[
     switch_on_term(2,1,fail,fail,fail),
 
 label(1),
@@ -389,7 +423,7 @@ label(5),
     proceed]).
 
 
-predicate(export_type/5,197,static,private,monofile,global,[
+predicate(export_type/5,204,static,private,monofile,global,[
     pragma_arity(6),
     get_current_choice(x(5)),
     try_me_else(1),
@@ -484,7 +518,7 @@ label(7),
     proceed]).
 
 
-predicate(emit_file_name_if_needed/2,223,static,private,monofile,global,[
+predicate(emit_file_name_if_needed/2,230,static,private,monofile,global,[
     pragma_arity(3),
     get_current_choice(x(2)),
     try_me_else(1),
@@ -510,7 +544,7 @@ label(1),
     proceed]).
 
 
-predicate(emit_wam_code/3,233,static,private,monofile,global,[
+predicate(emit_wam_code/3,240,static,private,monofile,global,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(5),
@@ -613,7 +647,7 @@ label(8),
     execute(emit_one_inst/2)]).
 
 
-predicate('$emit_wam_code/3_$aux2'/2,257,static,private,monofile,local,[
+predicate('$emit_wam_code/3_$aux2'/2,264,static,private,monofile,local,[
     pragma_arity(3),
     get_current_choice(x(2)),
     try_me_else(1),
@@ -629,7 +663,7 @@ label(1),
     proceed]).
 
 
-predicate('$emit_wam_code/3_$aux1'/2,247,static,private,monofile,local,[
+predicate('$emit_wam_code/3_$aux1'/2,254,static,private,monofile,local,[
     pragma_arity(3),
     get_current_choice(x(2)),
     try_me_else(1),
@@ -645,7 +679,7 @@ label(1),
     proceed]).
 
 
-predicate(emit_one_inst/2,269,static,private,monofile,global,[
+predicate(emit_one_inst/2,276,static,private,monofile,global,[
     pragma_arity(3),
     get_current_choice(x(2)),
     try_me_else(1),
@@ -678,7 +712,7 @@ label(1),
     execute(write/2)]).
 
 
-predicate(emit_args/4,279,static,private,monofile,global,[
+predicate(emit_args/4,286,static,private,monofile,global,[
     pragma_arity(5),
     get_current_choice(x(4)),
     try_me_else(1),
@@ -712,7 +746,7 @@ label(1),
     execute(emit_args/4)]).
 
 
-predicate('$emit_args/4_$aux1'/2,282,static,private,monofile,local,[
+predicate('$emit_args/4_$aux1'/2,289,static,private,monofile,local,[
     pragma_arity(3),
     get_current_choice(x(2)),
     try_me_else(1),
@@ -729,7 +763,7 @@ label(1),
     execute(put_char/2)]).
 
 
-predicate(emit_one_arg/2,292,static,private,monofile,global,[
+predicate(emit_one_arg/2,299,static,private,monofile,global,[
     pragma_arity(3),
     get_current_choice(x(2)),
     try_me_else(1),
@@ -790,7 +824,7 @@ label(2),
     execute(writeq/2)]).
 
 
-predicate(emit_one_f_n/2,316,static,private,monofile,global,[
+predicate(emit_one_f_n/2,323,static,private,monofile,global,[
     switch_on_term(2,fail,fail,fail,1),
 
 label(1),
@@ -833,7 +867,7 @@ label(5),
     execute(format/3)]).
 
 
-predicate(emit_list/3,325,static,private,monofile,global,[
+predicate(emit_list/3,332,static,private,monofile,global,[
     switch_on_term(1,2,fail,4,fail),
 
 label(1),
@@ -882,7 +916,7 @@ label(4),
     execute(emit_list/3)]).
 
 
-predicate(emit_ensure_linked/0,336,static,private,monofile,global,[
+predicate(emit_ensure_linked/0,343,static,private,monofile,global,[
     pragma_arity(1),
     get_current_choice(x(0)),
     try_me_else(1),
@@ -919,7 +953,7 @@ label(1),
     proceed]).
 
 
-predicate('$emit_ensure_linked/0_$aux1'/1,336,static,private,monofile,local,[
+predicate('$emit_ensure_linked/0_$aux1'/1,343,static,private,monofile,local,[
     try_me_else(1),
     allocate(3),
     get_variable(y(0),0),
@@ -944,7 +978,7 @@ label(1),
     proceed]).
 
 
-predicate(bc_emit_code/5,353,static,private,monofile,global,[
+predicate(bc_emit_code/5,360,static,private,monofile,global,[
     allocate(3),
     get_variable(y(0),4),
     put_atom(streamwamfile,4),
@@ -960,7 +994,7 @@ predicate(bc_emit_code/5,353,static,private,monofile,global,[
     execute('$bc_emit_code/5_$aux1'/3)]).
 
 
-predicate('$bc_emit_code/5_$aux1'/3,353,static,private,monofile,local,[
+predicate('$bc_emit_code/5_$aux1'/3,360,static,private,monofile,local,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(1),
@@ -1010,7 +1044,7 @@ label(1),
     execute(bc_emit_lst_clause/2)]).
 
 
-predicate('$bc_emit_code/5_$aux2'/4,353,static,private,monofile,local,[
+predicate('$bc_emit_code/5_$aux2'/4,360,static,private,monofile,local,[
     pragma_arity(5),
     get_current_choice(x(4)),
     try_me_else(1),
@@ -1034,7 +1068,7 @@ label(1),
     proceed]).
 
 
-predicate(bc_emit_lst_clause/2,374,static,private,monofile,global,[
+predicate(bc_emit_lst_clause/2,381,static,private,monofile,global,[
     switch_on_term(1,2,fail,4,fail),
 
 label(1),
@@ -1080,7 +1114,7 @@ label(4),
     execute(bc_emit_lst_clause/2)]).
 
 
-predicate(bc_emit_prolog_term/2,387,static,private,monofile,global,[
+predicate(bc_emit_prolog_term/2,394,static,private,monofile,global,[
     try_me_else(1),
     allocate(3),
     get_variable(y(0),0),
